ingress-istio.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: istio-system
spec:
  rules:
  - host: "www.service.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80

  - host: "tracing.service.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: tracing
          servicePort: 80


  - host: "grafana.service.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: grafana
          servicePort: 3000
